<resources>
    <string name="app_name">High Mountain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_image">image</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="user_stories">user_stories</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="dialog_add_to_story">AddToStoryDialog</string>
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>
    <string name="spring_header_behavior">tabian.com.instagramclonetest.springheader.SpringHeaderBehavior</string>
    <string name="dependent_view_behavior">tabian.com.instagramclonetest.DependentViewBehavior</string>
    <string name="simple_refresh_header_text_below_threshold">below fold</string>
    <string name="simple_refresh_header_text_above_threshold">above folder</string>
    <string name="simple_refresh_header_text_refreshing">refreshing...</string>
    <string name="bitmap">bitmap</string>
    <string name="image_load_error">image_load_error</string>
    <string name="media_type">media_type</string>
    <string name="duration">duration</string>
    <string name="encoded_bitmap">encoded_bitmap</string>
    <string name="width_scale_factor">width_scale_factor</string>
    <string name="height_scale_factor">height_scale_factor</string>
    <string name="video_uri">video_uri</string>
    <string name="surface_number">surface_number</string>
    <string name="rotations">rotations</string>
    <string name="resource_index">resource_index</string>
    <string name="media_index">media_index</string>
    <string name="media_source">media_source</string>
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="destinations">
        <item>France</item>
        <item>London</item>
        <item>Brazil</item>
    </string-array>
    <string-array name="transport_pref">
        <item>Aeroplane</item>
        <item>Train</item>
        <item>Bus</item>
        <item>Texi</item>
        <item>Auto</item>
    </string-array>
    <string name="str_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lbl_no_check_internet">No Internet Connection</string>
    <string name="str_be_a_traveller">#BEATRAVELLER</string>
    <string name="str_be_a_traveller1">#BE A TRAVELLER</string>
    <string name="lbl_font_roboto_black">Roboto-Black.ttf</string>
    <string name="lbl_font_roboto_black_italic">Roboto-BlackItalic.ttf</string>
    <string name="lbl_font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="lbl_font_roboto_bold_italic">Roboto-BoldItalic.ttf</string>
    <string name="lbl_font_roboto_italic">Roboto-Italic.ttf</string>
    <string name="lbl_font_roboto_light">Roboto-Light.ttf</string>
    <string name="lbl_font_roboto_light_italic">Roboto-LightItalic.ttf</string>
    <string name="lbl_font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="lbl_font_roboto_medium_italic">Roboto-MediumItalic.ttf</string>
    <string name="lbl_font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="lbl_font_roboto_thin">Roboto-Thin.ttf</string>
    <string name="lbl_font_roboto_thin_italic">Roboto-ThinItalic.ttf</string>
    <string name="str_header">Content-Type</string>
    <string name="str_header_type">application/form-data</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_forget_password"><u>Forget your password?</u></string>
    <string name="str_sign_up">Don\'t Have An Account.\n<u>Register Here</u></string>
    <string name="str_user_profile">User Profile Pic</string>
    <string name="str_already_member_is_it_you">Already Member\nis it you?</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_username">Username</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_mobile_no">Mobile number</string>
    <string name="str_date_of_birth_dd_mm_yyy">Date of Birth(DD/MM/YYYY)</string>
    <string name="str_referral_code_optional">Referral code(Optional)</string>
    <string name="str_php">.php</string>
    <string name="str_api">api</string>
    <string name="str_time_log">time_log</string>
    <string name="str_register_login">register_login</string>
    <string name="str_like_data">like_data</string>
    <string name="str_resend">Resend</string>
    <string name="str_submit">Submit</string>
    <string name="str_other">Other</string>
    <string name="str_female">Female</string>
    <string name="str_male">Male</string>
    <string name="str_already_have_an_account">Already have an Account?\n<u>Sign In Here</u></string>
    <string name="str_generate_otp_for_sign_up">Generate OTP for sign up</string>
    <string name="str_dont_get_the_otp">Don\'t get the OTP? 00.00</string>
    <string name="str_dont_get_the_otp_">Don\'t get the OTP?</string>
    <string name="str_we_have_sent_an_otp_on_your_mobile_number_91_9702654789">We have sent an OTP on your \nmobile number +91–9702654789</string>
    <string name="str_we_have_sent_an_otp_on_your_mobile_number">We have sent an OTP on your \nmobile number</string>
    <string name="str_verifying_your_number">Verifying your number!</string>
    <string name="str_search">Search</string>
    <string name="str_profile">Profile</string>
    <string name="str_logout">Logout</string>
    <string name="str_hello_android">Hello Android</string>
    <string name="str_let_s_barter">Let\'s Barter</string>
    <string name="str_dubai">Dubai</string>
    <string name="str_2500">$2500</string>
    <string name="str_ok">OK</string>
    <string name="str_account">Account</string>
    <string name="str_chat_now">Chat Now</string>
    <string name="str_2_hr_ago">2 hr ago</string>
    <string name="str_i_love_shimla">i love shimla</string>
    <string name="str_i_want_to_go_Mumbai">i want to go mumbai</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_follow_requests">Follow Requests</string>
    <string name="str_approve_or_ignore_requests">Approve or ignore requests</string>
    <string name="str_private_account">Private Account</string>
    <string name="str_photos_of_you">Photos of You</string>
    <string name="str_edit_profile_">Edit Profile</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_blocked_users">Blocked Users</string>
    <string name="str_posts_you_ve_liked">Posts You\'ve Liked</string>
    <string name="str_add_account">Add Account</string>
    <string name="str_help_center">Help Center</string>
    <string name="str_report_a_problem">Report a Problem</string>
    <string name="str_support">Support</string>
    <string name="str_change_to_private_account">Change to Private Account?</string>
    <string name="str_private_account_msg">When Your account is private,only people you approve can see your photos,videos and stories on HM. Your existing followers won\'t be affected.</string>
</resources>