<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHome1_sld"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxLines="5"
        android:text="@string/str_i_love_shimla"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxLines="5"
        android:text="@string/str_i_want_to_go_Mumbai"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgHome1_sld"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/str_image"
        android:src="@color/light" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_barter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/border_dark_pink_3"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/str_let_s_barter"
            android:textAllCaps="false"
            android:textColor="@color/dark_pink3"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_chat_now"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/border_dark_pink_3"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/str_chat_now"
            android:textAllCaps="false"
            android:textColor="@color/dark_pink3"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>