<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rr_header_file"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/circle_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/str_image"
        android:src="@color/light" />

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/circle_img"
        android:layout_toRightOf="@+id/circle_img"
        android:lines="1"
        android:maxLines="3"
        android:text="@string/str_hello_android"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_time_ago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_label"
        android:layout_margin="2dp"
        android:layout_toEndOf="@+id/circle_img"
        android:layout_toRightOf="@+id/circle_img"
        android:maxLines="1"
        android:text="@string/str_2_hr_ago"
        android:textSize="12sp" />

</RelativeLayout>
