<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llCustomDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCustomHeader"
        style="@style/Black.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:text="@string/str_change_to_private_account" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light" />

    <TextView
        android:id="@+id/tvCustomMsg"
        style="@style/Black.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/str_private_account_msg" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCancelPrivate"
            style="@style/Black.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/str_cancel" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/light" />


        <Button
            android:id="@+id/btnOkPrivate"
            style="@style/Black.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/str_ok" />
    </LinearLayout>

</LinearLayout>