<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llActivitiesData"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background"
    android:elevation="5dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgActPic"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/str_image"
        android:scaleType="matrix"
        android:src="@drawable/logo_" />

    <TextView
        android:id="@+id/txtActName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/str_dubai"
        android:textColor="@color/light_orange2"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtActPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:lines="1"
        android:text="@string/str_2500"
        android:textColor="@color/black" />

</LinearLayout>