<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlFollowRequest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/str_image"
        android:src="@drawable/ic_user_add"/>

    <TextView
        android:id="@+id/tvFollowRequest"
        style="@style/Black.15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@id/imgIcon"
        android:layout_toRightOf="@id/imgIcon"
        android:text="@string/str_follow_requests" />

    <TextView
        style="@style/Black.15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFollowRequest"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/imgIcon"
        android:layout_toRightOf="@id/imgIcon"
        android:text="@string/str_approve_or_ignore_requests" />

</RelativeLayout>